# fbow_vocab_trainer

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: brisk.yaml  orb.yaml  sift.yaml  trainer.yaml
src/: fbow_trainer_main.cpp
src/config/: fbow_trainer_config.cpp  fbow_trainer_config.h
src/dataset/: fbow_trainer_dataset.cpp  fbow_trainer_dataset.h
src/features/: fbow_trainer_features.cpp  fbow_trainer_features.h
src/train/: fbow_trainer_train.cpp  fbow_trainer_train.h
src/vocabulary_test/: fbow_trainer_test.cpp  fbow_trainer_test.h
test/: CMakeLists.txt  test_fbow_trainer_config.cpp  test_fbow_trainer_features.cpp
